climatica/climatica.css
/* for all /////////////////////////////////////////////////////////////////////////////////////////////////////*/


* {
    margin: 0;
    padding: 0;
}

body {
    background-color: gray;
}

.climatica {
    display: flex;
}

ul {
    list-style-type: none;
    display: flex;
    flex-direction: column;
}

.on_display {
    left: 0;
    transition: 1s;
}

.display_none {
    display: none !important;
}

.not_on_display {
    left: -100%;
}

.active_link {
    color: #FF6523;
}

.blure {
    filter: blur(4px);
}

.pos_init {
    position: initial !important;
}


/* header /////////////////////////////////////////////////////////////////////////////////////////////////////*/

.header {
    max-width: 295px;
    background-color: black;
    color: white;
    padding: 0 55px;
}

.flex_col_center {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.flex_col {
    display: flex;
    flex-direction: column;
}

.flex {
    display: flex;
}

.flex_sb {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo {
    margin: 30px 0;
}

.logo img {
    cursor: pointer;
}

.logo h6 {
    font-size: 11px;
    opacity: 40%;
    word-spacing: 1px;
    letter-spacing: 1px;
}

.search {
    display: flex;
    position: relative;
    width: 185px;
    height: 38px;
}

.search input {
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 20px;
    background-color: gray;
    color: white;
    font-size: 14px;
    padding: 0 20px;
    box-sizing: border-box;
    border: none;
    opacity: 40%;
}

.search img {
    width: 14px;
    right: 20px;
    position: absolute;
    top: 12px;
    cursor: pointer;
}

.pos_rel_right8 {
    position: relative;
    right: 8px;
    bottom: 6px;
}

.pos_rel_right8 img {
    position: absolute;
}

.active_img {
    z-index: 2;
}

.nav {
    width: 100%;
    margin-top: 50px;
}

.nav img {
    cursor: pointer;
}

.nav ul {
    row-gap: 20px;
}

.nav h2 {
    font-size: 16px;
    cursor: pointer;
    width: fit-content;
}

.contakts {
    width: 100%;
    margin: 80px 0 65px 0;
}

.phones ul {
    row-gap: 10px;
}

.phones li {
    color: #FF6523;
    cursor: pointer;
}

.messengers {
    margin-top: 40px;
}

.messengers ul {
    row-gap: 15px;
}

.messengers li {
    display: flex;
    column-gap: 15px;
    align-items: center;
    cursor: pointer;
}

.messengers h3 {
    font-size: 14px;
    text-transform: uppercase;
}

.cize_table_button {
    width: 100%;
    height: 45px;
    box-sizing: border-box;
    border: 1px solid #FF6523;
    background-color: black;
    color: white;
    font-size: 14px;
    margin-bottom: 110px;
    cursor: pointer;
}



/* footer /////////////////////////////////////////////////////////////////////////////////////////////////////*/

.footer {
    min-width: 650px;
    height: 240px;
    background-color: black;
    color: white;
    box-sizing: border-box;
    padding: 30px 0;
}

.w_100 {
    width: 100%;
    row-gap: 10px;
}

.w_80 {
    width: 80%;
    align-items: start;
}

.w_80 h2,
.w_80 h5 {
    cursor: pointer;
    width: fit-content;
}

.w_80 h6 {
    text-align: end;
    font-size: 12px;
    font-weight: 400;
    opacity: 40%;
}

.w_80 h2 {
    font-size: 14px;
    text-transform: uppercase;
    font-weight: 700;
}

.w_80 h5 {
    font-size: 14px;
    font-weight: 300;
}

.w_80 ul {
    row-gap: 15px;
}

.no_gap {
    row-gap: 0 !important;
}



/* content /////////////////////////////////////////////////////////////////////////////////////////////////////*/

.content {
    min-height: 1000px;
    background-color: white;
    box-sizing: border-box;
    overflow: hidden;
    padding-bottom: 100px;
}

.pos_rel {
    position: relative;
    width: 100%;
    height: 100%;
}


/* open menu /////////////////////////////////////////////////////////////////////////////////////////////////////*/



#Open_menu_catalog,
#Open_menu_seazon {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: black;
    opacity: 85%;
    box-sizing: border-box;
    color: white;
    z-index: 99;
}

.gap_30 {
    row-gap: 30px;
    margin: 138px 0 0 193px;
}

.gap_30 h2 {
    text-transform: uppercase;
    font-size: 24px;
    font-weight: 700;
}

.flex_col_sb {
    width: 100%;
    max-width: 1065px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.gap_20 {
    row-gap: 20px;
}

.gap_20 h3 {
    font-size: 18px;
    font-weight: 300px;
    opacity: 40%;
    cursor: pointer;
    width: fit-content;
}


/* pages /////////////////////////////////////////////////////////////////////////////////////////////////////*/


#Home,
#Catalog,
#Sales_product_list,
#New_product_list,
#News,
#News_article,
#Payment_delivery,
#Contakts,
#About_company,
#Partners,
#Search,
#Search_not_found,
#FAQ,
#Size_table,
#Size_table_without_women,
#Thank_you_page,
#Error_404 {
    position: absolute;
    display: flex;
    column-gap: 30px;
    /* overflow: hidden; */
    margin-left: 60px;
    padding-top: 70px;
    flex-wrap: wrap;
}

.page_name {
    font-size: 36px;
    font-weight: 700;
    text-transform: uppercase;
}


/* card /////////////////////////////////////////////////////////////////////////////////////////////////////////*/

#Sales_product_list,
#New_product_list,
#Target1,
#Target2,
#Target3,
#Target4,
#Target5,
#News_page_content {
    flex-wrap: wrap;
    row-gap: 30px;
}

#Target1,
#Target2,
#Target3,
#Target4,
#Target5,
#News_page_content {
    margin: 15px 0;
    display: flex;
    column-gap: 30px;
}

.product_card {
    width: 295px;
    border: 1px solid lightgray;
    height: 520px;
    /* overflow: hidden; */
}

.product_img_section {
    position: relative;
}

.new_img,
.sales_img {
    position: absolute;
    right: 15px;
    top: 15px;
}

.sales_img {
    top: 65px
}
/* ... */

